# exccpkg

./: .gitignore  README.md  dsdep.py  dspkg.py  setup.py  tools.py
dspkg/: dspkg.py  tools.py
example/basic/: CMakeLists.txt  Pipfile  dspkgfile.py  exccpkgfile.py  exccpkgfile_dummy.py  expkgfile.py  hello_world.cc  pyproject.toml
example/nested/: CMakeLists.txt  Pipfile  dspkgfile.py  exccpkgfile.py  expkgfile.py  hello_world.cc  pyproject.toml
exccpkg/: exccpkg.py  tools.py
